--- a/Final_Chatbot.ipynb
+++ b/Final_Chatbot.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,76 +17,14 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "source": [
-        "!pip install -U kaleido"
-      ],
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "P7iZU2_mrpbd",
-        "outputId": "23f1c14e-b543-4a26-adac-b2cd52399e21"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting kaleido\n",
-            "  Downloading kaleido-0.2.1-py2.py3-none-manylinux1_x86_64.whl (79.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.9/79.9 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: kaleido\n",
-            "Successfully installed kaleido-0.2.1\n"
-          ]
-        }
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/onyxmytrojin/Chatbot/blob/main/Final_Chatbot.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!python --version"
-      ],
-      "metadata": {
-        "id": "ntua9yq3Tk7V"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip uninstall tensorflow"
-      ],
-      "metadata": {
-        "id": "WXXFZq1VclUn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install tensorflow==2.12.0"
-      ],
-      "metadata": {
-        "id": "3_PFnzkfc2EI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import tensorflow as tf\n",
-        "print(tf.__version__)\n"
-      ],
-      "metadata": {
-        "id": "hx6pOR9osM8f"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -95,35 +34,11 @@
         "nltk.download('wordnet') # first-time use only\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "d12O4CLcRJss",
-        "outputId": "e74373f7-65ec-4703-c931-cc4f25f17b64"
+        "collapsed": true
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]   Package wordnet is already up-to-date!\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -131,25 +46,11 @@
         "!pip install tflearn"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "dsDSznC9dKrz",
-        "outputId": "3a3b28b4-f8d4-4567-e564-b2d0cc097a45"
+        "collapsed": true
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: tflearn in /usr/local/lib/python3.10/dist-packages (0.5.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from tflearn) (1.23.5)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from tflearn) (1.16.0)\n",
-            "Requirement already satisfied: Pillow in /usr/local/lib/python3.10/dist-packages (from tflearn) (9.4.0)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
